[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Characters/LeniSS.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.5, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5, 33.25 )

[sub_resource type="Animation" id=6]
resource_name = "Dizzy"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("LeniSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "Falling"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("LeniSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "Jump"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("LeniSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 12, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("LeniSprite:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LeniSprite:frame_coords:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LeniSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "Run"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "bezier"
tracks/0/path = NodePath("LeniSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 )
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 240, 464 )
script = ExtResource( 1 )

[node name="LeniSprite" type="Sprite" parent="."]
position = Vector2( 2, -32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 17

[node name="PlayerColl" type="CollisionShape2D" parent="."]
position = Vector2( 4.5, 12 )
shape = SubResource( 1 )

[node name="PlayerHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2( -3.5, -18.75 )
shape = SubResource( 2 )

[node name="floorRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/Dizzy = SubResource( 6 )
anims/Falling = SubResource( 7 )
anims/Jump = SubResource( 10 )
anims/RESET = SubResource( 4 )
anims/Run = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]
