[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://placeHolderWhite.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.2, 8.2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 50 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.5, 48.5 )

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 415, 444 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerColl" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )

[node name="PlayerHitBox" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerHitBox"]
shape = SubResource( 2 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 431, 424 )
__meta__ = {
"_edit_group_": true
}

[node name="PlatColl" type="CollisionShape2D" parent="Platform"]
position = Vector2( 0, 90 )
shape = SubResource( 3 )

[node name="PlatSprite" type="Sprite" parent="Platform"]
position = Vector2( 0, 200 )
scale = Vector2( 3, 20 )
texture = ExtResource( 2 )

[node name="PlatHitBox" type="Area2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/PlatHitBox"]
position = Vector2( -20.5, 88.5 )
shape = SubResource( 4 )
